add markup and content

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,49 @@
 	<meta charset="UTF-8">
 	<title>SampleFlexyFlex</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+	<header>
+		<nav>
+			<a href="#">Settings</a>
+			<h1>Guitar Practice</h1>
+			<a href="#">Setlists</a>
+		</nav>
+	</header>
+
+	<main>
+
+		<p>10 minutes today</p>
+
+		<div>
+			<div>
+				<button>lil</button>
+				<button>huge</button>
+				<button>lil</button>
+			</div>
+			<div>
+				<p>Track</p>
+				<p>Artist</p>
+			</div>
+			<div>
+				<input type="range" name="">
+				<button>-5</button>
+				<button>Delete markers</button>
+				<button>+5</button>
+			</div>
+		</div>
+
+		<div>
+			<button>SLOW</button>
+			<button>SETLIST</button>
+			<button>COUNT</button>
+			<input type="range" name="">
+		</div>
+
+	</main>
+
 	
 </body>
 </html>
