modify secondary controls markup, add draft button styles

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 
 		<div>
 			<div>
-				<button>lil</button>
-				<button>huge</button>
-				<button>lil</button>
+				<button class="btn-symbol">&larr;</button>
+				<button class="btn-symbol">huge</button>
+				<button class="btn-symbol">&rarr;</button>
 			</div>
 			<div>
 				<p>Track</p>
@@ -32,16 +32,25 @@
 			</div>
 			<div>
 				<input type="range" name="">
-				<button>-5</button>
+				<button class="btn-symbol">-5</button>
 				<button>Delete markers</button>
-				<button>+5</button>
+				<button class="btn-symbol">+5</button>
 			</div>
 		</div>
 
 		<div>
-			<button>SLOW</button>
-			<button>SETLIST</button>
-			<button>COUNT</button>
+			<label>
+				<input type="checkbox">
+				SLOW
+			</label>
+			<label>
+				<input type="checkbox">
+				SETLIST
+			</label>
+			<label>
+				<input type="checkbox">
+				COUNT
+			</label>
 			<input type="range" name="">
 		</div>
 
