add playback controls styles

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body class="guitar-practice">
 
 	<header>
 		<nav>
@@ -18,12 +18,12 @@
 
 	<main>
 
-		<p>10 minutes today</p>
+		<p class="training-time-summary">10 minutes today</p>
 
 		<div>
-			<div>
+			<div class="playback-controls-primary">
 				<button class="btn-symbol">&larr;</button>
-				<button class="btn-symbol">huge</button>
+				<button class="btn-symbol play"><span class="symbol symbol-play">&#9658;</span></button>
 				<button class="btn-symbol">&rarr;</button>
 			</div>
 			<div>
