add volume slider, adjust font size

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,10 @@
 				</label>
 			</div>
 			<div class="volume-slider">
+				<span>D</span>
 				<input type="range" name="">
+				<span>U</span>
+				<span>x</span>
 			</div>
 		</div>
 
